--- a/WebStudy04_SpringBoard/src/main/webapp/WEB-INF/web.xml
+++ b/WebStudy04_SpringBoard/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,19 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	
+	<filter>
+		<filter-name>CharacterEncodingFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>CharacterEncodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
 <!-- 3. 하위 컨테이너 생성, FrontController pattern활용 -->
 	<!-- The front controller of this Spring Web application, responsible for handling all application requests -->
 	<servlet>
@@ -34,10 +47,10 @@
 	</servlet>
 
 	<!-- Map all requests to the DispatcherServlet for handling -->
-<!-- 	모든요청을 front로 보내겠다는 의미로 url-pattern작성 -->
+<!-- 	모든요청을 front로 보내겠다는 의미로 url-pattern작성  /하나는 디폴트 경로-->
 	<servlet-mapping>
 		<servlet-name>springDispatcherServlet</servlet-name>
-		<url-pattern>*.do</url-pattern>
+		<url-pattern>/</url-pattern>
 		<url-pattern>/index.do</url-pattern>
 	</servlet-mapping>
 
