--- a/WebStudy04_SpringBoard/pom.xml
+++ b/WebStudy04_SpringBoard/pom.xml
@@ -60,6 +60,12 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
+		<!-- Spring websocket -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-websocket</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
