--- a/WebStudy04_SpringBoard/pom.xml
+++ b/WebStudy04_SpringBoard/pom.xml
@@ -222,6 +222,12 @@
 			<version>${org.springframework-version}</version>
 			<scope>test</scope>
 		</dependency>
-
+		
+		<!-- security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>4.2.14.RELEASE</version>
+		</dependency>
 	</dependencies>
 </project>
