--- a/WebStudy05_SpringMVC/pom.xml
+++ b/WebStudy05_SpringMVC/pom.xml
@@ -49,6 +49,17 @@
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
 		</dependency>
+		<!-- Task Scheduling, Mail support -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>2.3.2</version>
+		</dependency>
 		<!-- 트랜잭션 관리 지원 - AOP방법론 -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
@@ -220,6 +231,13 @@
 			<artifactId>spring-test</artifactId>
 			<version>${org.springframework-version}</version>
 			<scope>test</scope>
+		</dependency>
+		
+		<!-- security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>4.2.14.RELEASE</version>
 		</dependency>
 
 	</dependencies>
